# mcp-core

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/logto/: .env.example  README.md  bootstrap-apps.py  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  nginx-auth.conf  provision-ses.sh  verify.py
docs/: fastmcp-migration.md  integration-guide.md  oauth-mcp-integration.md
examples/minimal_server/: .env.example  main.py  mcp_tools.py  requirements.txt
src/mcp_core/: __init__.py  auth.py  billing.py  dcr.py  health.py  routes.py  tool_logging.py
tests/: .env.live.example  conftest.py  test_auth.py  test_billing.py  test_branded_sign_in.py  test_dcr.py  test_health.py  test_integration.py  test_logging.py
tests/live/: conftest.py  test_live_auth.py  test_live_billing.py  test_live_health.py  test_live_integration.py  test_live_logging.py
